--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
         <div class="nav">
-            <div class="logo"><img src="images/index/logo.svg" alt=""></div>
+            <div class="logo"><a href="index.html"><img src="images/index/logo.svg" alt=""></a></div>
             <div class="links">
                 <a href="about.html" class="about">About</a>
-                <a href="" class="caseStudy">Case Study</a>
+                <a href="caseStudy.html" class="caseStudy">Case Study</a>
                 <a href="" class="contactUs">Contact Us</a>
             </div>
         </div>
