--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
     <div class="container">
@@ -14,43 +15,47 @@
             <div class="links">
                 <a href="about.html" class="about">About</a>
                 <a href="caseStudy.html" class="caseStudy">Case Study</a>
-                <a href="" class="contactUs">Contact Us</a>
+                <a href="contact.html" class="contactUs">Contact Us</a>
             </div>
         </div>
-        <div class="hero">
-            <h2 class="heroText">Where Creative Design Meets Impactful Marketing for Unforgettable Brands</h2>
-        </div>
-        <div class="section">
-            <div class="services">
-                <h3>Our Services</h3>
-                <div class="serviceList">
-                    <div class="service">
-                        <h2>Web Design ></h2>
-                        <p>Web design is a critical component of any digital agency's offerings. It involves creating visually appealing and user-friendly websites that effectively convey the client's message and brand identity.</p>
-                    </div>
-                    <hr>
-                    <div class="service fInside">
-                        <h2>Social Media Marketing ></h2>
-                        <p>Web design is a critical component of any digital agency's offerings. It involves creating visually appealing and user-friendly websites that effectively convey the client's message and brand identity.</p>
-                    </div>
-                    <hr>
-                    <div class="service sInside">
-                        <h2>Search Engine Optimization ></h2>
-                        <p>Web design is a critical component of any digital agency's offerings. It involves creating visually appealing and user-friendly websites that effectively convey the client's message and brand identity.</p>
-                    </div>
-                    <hr>
-                    <div class="service">
-                        <h2>Content Marketing ></h2>
-                        <p>Web design is a critical component of any digital agency's offerings. It involves creating visually appealing and user-friendly websites that effectively convey the client's message and brand identity.</p>
+        <div class="content">
+            <div class="hero">
+                <h2 class="heroText">Where Creative Design Meets Impactful Marketing for Unforgettable Brands</h2>
+            </div>
+            <div class="section">
+                <div class="services">
+                    <h3>Our Services</h3>
+                    <div class="serviceList">
+                        <div class="service">
+                            <h2>Web Design ></h2>
+                            <p>Web design is a critical component of any digital agency's offerings. It involves creating visually appealing and user-friendly websites that effectively convey the client's message and brand identity.</p>
+                        </div>
+                        <hr>
+                        <div class="service fInside">
+                            <h2>Social Media Marketing ></h2>
+                            <p>Web design is a critical component of any digital agency's offerings. It involves creating visually appealing and user-friendly websites that effectively convey the client's message and brand identity.</p>
+                        </div>
+                        <hr>
+                        <div class="service sInside">
+                            <h2>Search Engine Optimization ></h2>
+                            <p>Web design is a critical component of any digital agency's offerings. It involves creating visually appealing and user-friendly websites that effectively convey the client's message and brand identity.</p>
+                        </div>
+                        <hr>
+                        <div class="service">
+                            <h2>Content Marketing ></h2>
+                            <p>Web design is a critical component of any digital agency's offerings. It involves creating visually appealing and user-friendly websites that effectively convey the client's message and brand identity.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="section greySection">
-            <div class="circle">
-                <div class="heroText">Creativity On Demand</div>
+            <div class="section greySection">
+                <div class="circle">
+                    <div class="heroText">Creativity On Demand</div>
+                </div>
             </div>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
