--- a/about.html
+++ b/about.html
@@ -14,56 +14,60 @@
             <div class="links">
                 <a href="about.html" class="about">About</a>
                 <a href="caseStudy.html" class="caseStudy">Case Study</a>
-                <a href="" class="contactUs">Contact Us</a>
+                <a href="contact.html" class="contactUs">Contact Us</a>
             </div>
         </div>
-        <div class="aboutHead section">
-            <h1>About BoldBridge</h1>
-            <p>We specialize in creating and implementing effective digital marketing strategies that drive growth and increase revenue. Our team of skilled professionals has a wealth of experience in web design, search engine optimization, social media marketing, pay-per-click advertising, and more.</p>
-        </div>
-        <div class="section">
-            <div class="founders">
-                <h1>Meet Our Founders</h1>
-                <div class="founder">
-                    <img src="images/about/simon.png" alt="">
-                    <div class="info">
-                        <div class="title">
-                            <div class="name">Simon Smith</div>
-                            <div class="position">Co-Founder, CEO</div>
-                        </div>
-                        <div class="summary">
-                            As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.
-                        </div>
-                    </div>
-                </div>
-
-                <div class="founder">
-                    <img src="images/about/stevens.png" alt="">
-                    <div class="info">
-                        <div class="title">
-                            <div class="name">Stevens Smith</div>
-                            <div class="position">Co-Founder, CEO</div>
-                        </div>
-                        <div class="summary">
-                            As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.
+        <div class="content">
+            <div class="aboutHead section">
+                <h1>About BoldBridge</h1>
+                <p>We specialize in creating and implementing effective digital marketing strategies that drive growth and increase revenue. Our team of skilled professionals has a wealth of experience in web design, search engine optimization, social media marketing, pay-per-click advertising, and more.</p>
+            </div>
+            <div class="section">
+                <div class="founders">
+                    <h1>Meet Our Founders</h1>
+                    <div class="founder">
+                        <img src="images/about/simon.png" alt="">
+                        <div class="info">
+                            <div class="title">
+                                <div class="name">Simon Smith</div>
+                                <div class="position">Co-Founder, CEO</div>
+                            </div>
+                            <div class="summary">
+                                As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="founder">
-                    <img src="images/about/jackson.png" alt="">
-                    <div class="info">
-                        <div class="title">
-                            <div class="name">Jackson Smith</div>
-                            <div class="position">Co-Founder, CEO</div>
+                    <div class="founder">
+                        <img src="images/about/stevens.png" alt="">
+                        <div class="info">
+                            <div class="title">
+                                <div class="name">Stevens Smith</div>
+                                <div class="position">Co-Founder, CEO</div>
+                            </div>
+                            <div class="summary">
+                                As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.
+                            </div>
                         </div>
-                        <div class="summary">
-                            As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.
+                    </div>
+
+                    <div class="founder">
+                        <img src="images/about/jackson.png" alt="">
+                        <div class="info">
+                            <div class="title">
+                                <div class="name">Jackson Smith</div>
+                                <div class="position">Co-Founder, CEO</div>
+                            </div>
+                            <div class="summary">
+                                As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="script.js"></script>
     </div>
 </body>
 </html>
