--- a/caseStudy.html
+++ b/caseStudy.html
@@ -14,58 +14,62 @@
             <div class="links">
                 <a href="about.html" class="about">About</a>
                 <a href="caseStudy.html" class="caseStudy">Case Study</a>
-                <a href="" class="contactUs">Contact Us</a>
+                <a href="contact.html" class="contactUs">Contact Us</a>
             </div>
         </div>
-        <div class="section">
-            <div class="aboutHead">
-                <h1>Case Studies</h1>
-                <p>We specialize in creating and implementing effective digital marketing strategies that drive growth and increase revenue. Our team of skilled professionals has a wealth of experience in web design, search engine optimization, social media marketing, pay-per-click advertising, and more.</p>
-            </div>
-        </div>
-        <div class="section">
-            <div class="cases">
-                <div class="case">
-                    <img src="images/case/caseStudy.png" alt="">
-                    <div class="info">
-                        <div class="tag">Content Marketing</div>
-                        <h1 class="title">How Helix Grew Social Following By 440% in Three Months</h1>
-                        <p>As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.</p>
-                        <a href=""><p>Read All Case Studies > </p></a>
-                    </div>
-                </div>
-
-                <div class="case">
-                    <img src="images/case/caseStudy2.png" alt="">
-                    <div class="info">
-                        <div class="tag">Branding</div>
-                        <h1 class="title">How Helix Grew Social Following By 440% in Three Months</h1>
-                        <p>As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.</p>
-                        <a href=""><p>Read All Case Studies > </p></a>
-                    </div>
-                </div>
-
-                <div class="case">
-                    <img src="images/case/caseStudy3.png" alt="">
-                    <div class="info">
-                        <div class="tag">Website Redesign</div>
-                        <h1 class="title">How Helix Grew Social Following By 440% in Three Months</h1>
-                        <p>As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.</p>
-                        <a href=""><p>Read All Case Studies > </p></a>
-                    </div>
-                </div>
-
-                <div class="case">
-                    <img src="images/case/caseStudy4.png" alt="">
-                    <div class="info">
-                        <div class="tag">Social Media Marketing</div>
-                        <h1 class="title">How Helix Grew Social Following By 440% in Three Months</h1>
-                        <p>As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.</p>
-                        <a href=""><p>Read All Case Studies > </p></a>
-                    </div>
+        <div class="content">
+            <div class="section">
+                <div class="aboutHead">
+                    <h1>Case Studies</h1>
+                    <p>We specialize in creating and implementing effective digital marketing strategies that drive growth and increase revenue. Our team of skilled professionals has a wealth of experience in web design, search engine optimization, social media marketing, pay-per-click advertising, and more.</p>
                 </div>
             </div>
+            <div class="section">
+                <div class="cases">
+                    <div class="case">
+                        <img src="images/case/caseStudy.png" alt="">
+                        <div class="info">
+                            <div class="tag">Content Marketing</div>
+                            <h1 class="title">How Helix Grew Social Following By 440% in Three Months</h1>
+                            <p>As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.</p>
+                            <a href=""><p>Read All Case Studies > </p></a>
+                        </div>
+                    </div>
+
+                    <div class="case">
+                        <img src="images/case/caseStudy2.png" alt="">
+                        <div class="info">
+                            <div class="tag">Branding</div>
+                            <h1 class="title">How Helix Grew Social Following By 440% in Three Months</h1>
+                            <p>As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.</p>
+                            <a href=""><p>Read All Case Studies > </p></a>
+                        </div>
+                    </div>
+
+                    <div class="case">
+                        <img src="images/case/caseStudy3.png" alt="">
+                        <div class="info">
+                            <div class="tag">Website Redesign</div>
+                            <h1 class="title">How Helix Grew Social Following By 440% in Three Months</h1>
+                            <p>As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.</p>
+                            <a href=""><p>Read All Case Studies > </p></a>
+                        </div>
+                    </div>
+
+                    <div class="case">
+                        <img src="images/case/caseStudy4.png" alt="">
+                        <div class="info">
+                            <div class="tag">Social Media Marketing</div>
+                            <h1 class="title">How Helix Grew Social Following By 440% in Three Months</h1>
+                            <p>As a graphic designer team member on a digital agency, your role is critical in creating visually appealing and effective digital marketing materials. Your expertise in design software, typography.</p>
+                            <a href=""><p>Read All Case Studies > </p></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="script.js"></script>
     </div>
 </body>
 </html>
