--- a/caseStudy.html
+++ b/caseStudy.html
@@ -67,7 +67,18 @@
                     </div>
                 </div>
             </div>
+            <div class="section footer">
+                <div class="contactInfoFooter">
+                    <p>support@example.com 📧</p>
+                    <p>+1 (208) 555-0112 📱</p>
+                </div>
+                <hr>
+                <div class="footerLogo"><img src="images/index/logo.svg" alt=""></div>
+                <p>©2023 BoldBridge. All rights reserved.</p>
+            </div>
         </div>
+
+    
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="script.js"></script>
     </div>
