--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
                     <div class="heroText">Creativity On Demand</div>
                 </div>
             </div>
+            <div class="section footer">
+                <div class="contactInfoFooter">
+                    <p>support@example.com 📧</p>
+                    <p>+1 (208) 555-0112 📱</p>
+                </div>
+                <hr>
+                <div class="footerLogo"><img src="images/index/logo.svg" alt=""></div>
+                <p>©2023 BoldBridge. All rights reserved.</p>
+            </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
